added to footer/about

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,7 +94,10 @@
 
 {% endblock %}
 <footer class="text-center mt-5">
-    Environment: {{ deployment_environment }} - Copyright: {{ year }} {{ format_price(100) }}
+    <b>Music Playlist Upload</b><br>
+        Environment: {{ deployment_environment }} - Copyright: {{ year }}<br>
+        Message: {{ mymessage }} {{ format_price(100) }}<br>
+        Contact: <a href="mailto:EMAIL_ADDRESS">clf9@njit.edu</a><br>
 </footer>
 </body>
 </html>
