--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 <article>{% block content %}
     <h1>About</h1>
-    {{ lipsum (n=5, html=True, min=20, max=100) }}
+    <p>
+        Hi! My name is Collin Fogerty. A little about me is that I am in my second semester of a masters degree in Cyber
+        Security and Privacy. I hope to graduate at the end of this spring semester and then go into the real world. I also play
+        on the lacrosse team here at NJIT. I have played for 5 years and made some of my best friends along the way. This class has
+        already taught me so many hands on tools I think are really useful and I hope to learn more. Thank you!
+    </p>
 {% endblock %}
 </article>
