--- a/app/simple_pages/templates/welcome.html
+++ b/app/simple_pages/templates/welcome.html
@@ -3,7 +3,9 @@
     <div class="row">
         <article class="col-12">
             <h1>Welcome</h1>
-            {{ lipsum (n=5, html=True, min=20, max=100) }}
+            Welcome to the Map and Song csv Upload database Website.
+            <br>
+            Please register for a free account and search through all the various features of this webpage.
         </article>
     </div>
 {% endblock %}
